exports[`no-skip-without-return > invalid(1): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
  5 | 			t.skip();
  6 | 			doStuff();
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-skip-without-return > invalid(1): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
> 5 | 			t.skip();
    | 			^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 			doStuff();
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-skip-without-return > invalid(10): import test from 'node:test';\ntest(\"x\", context => { context.skip(); doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", context => { context.skip(); doStuff(); });

`;

exports[`no-skip-without-return > invalid(10): import test from 'node:test';\ntest(\"x\", context => { context.skip(); doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", context => { context.skip(); doStuff(); });
    |                        ^^^^^^^^^^^^^^ \`context.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`context.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", context => { context.skip();
  3 | return; doStuff(); });

`;

exports[`no-skip-without-return > invalid(11): import test from 'node:test';\ntest(\"x\", async t => { await t.test(\"child\", t2 => { t2.skip(); doStuff(); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", async t => { await t.test("child", t2 => { t2.skip(); doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(11): import test from 'node:test';\ntest(\"x\", async t => { await t.test(\"child\", t2 => { t2.skip(); doStuff(); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", async t => { await t.test("child", t2 => { t2.skip(); doStuff(); }); });
    |                                                      ^^^^^^^^^ \`t2.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t2.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", async t => { await t.test("child", t2 => { t2.skip();
  3 | return; doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(12): import test from 'node:test';\ntest(\"x\", t => { if (cond) t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(12): import test from 'node:test';\ntest(\"x\", t => { if (cond) t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { if (cond) t.skip(); assert.ok(x); });
    |                            ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

`;

exports[`no-skip-without-return > invalid(13): import test from 'node:test';\ntest(\"x\", (t: any) => { t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(13): import test from 'node:test';\ntest(\"x\", (t: any) => { t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { t.skip(); assert.ok(x); });
    |                         ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t.skip();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(14): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip() as void;\n\tassert.ok(x);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip() as void;
  4 | 	assert.ok(x);
  5 | });

`;

exports[`no-skip-without-return > invalid(14): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip() as void;\n\tassert.ok(x);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip() as void;
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	assert.ok(x);
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip() as void;
  4 | 	return;
  5 | 	assert.ok(x);
  6 | });

`;

exports[`no-skip-without-return > invalid(15): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(15): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
> 3 | 	getTestContext().skip('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`getTestContext().skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`getTestContext().skip()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(16): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().todo('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().todo('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(16): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().todo('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
> 3 | 	getTestContext().todo('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`getTestContext().todo()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`getTestContext().todo()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().todo('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(17): import {test} from 'node:test';\ntest('a', t => {\n\tt!.skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	t!.skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(17): import {test} from 'node:test';\ntest('a', t => {\n\tt!.skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
> 3 | 	t!.skip('why');
    | 	^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	t!.skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(18): import {test} from 'node:test';\ntest('a', t => {\n\t(t as TestContext).skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	(t as TestContext).skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(18): import {test} from 'node:test';\ntest('a', t => {\n\t(t as TestContext).skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
> 3 | 	(t as TestContext).skip('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	(t as TestContext).skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(2): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { gtc().skip('r'); work(); }); 1`] = `

  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().skip('r'); work(); });

`;

exports[`no-skip-without-return > invalid(2): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { gtc().skip('r'); work(); }); 2`] = `

Message:
  1 | import {test, getTestContext as gtc} from 'node:test';
> 2 | test('a', () => { gtc().skip('r'); work(); });
    |                   ^^^^^^^^^^^^^^^ \`gtc().skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`gtc().skip()\`.:
  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().skip('r');
  3 | return; work(); });

`;

exports[`no-skip-without-return > invalid(3): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(); // TODO: enable once fixed\n\tcheck();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(); // TODO: enable once fixed
  4 | 	check();
  5 | });

`;

exports[`no-skip-without-return > invalid(3): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(); // TODO: enable once fixed\n\tcheck();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip(); // TODO: enable once fixed
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	check();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(); // TODO: enable once fixed
  4 | 	return;
  5 | 	check();
  6 | });

`;

exports[`no-skip-without-return > invalid(4): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(/* why */);\n\tcheck();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(/* why */);
  4 | 	check();
  5 | });

`;

exports[`no-skip-without-return > invalid(4): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(/* why */);\n\tcheck();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip(/* why */);
    | 	^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	check();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(/* why */);
  4 | 	return;
  5 | 	check();
  6 | });

`;

exports[`no-skip-without-return > invalid(5): import test from 'node:test';\ntest(\"x\", t => { t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(5): import test from 'node:test';\ntest(\"x\", t => { t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.skip(); assert.ok(x); });
    |                  ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.skip();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(6): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\tassert.ok(x);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	assert.ok(x);
  5 | });

`;

exports[`no-skip-without-return > invalid(6): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\tassert.ok(x);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip();
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	assert.ok(x);
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	return;
  5 | 	assert.ok(x);
  6 | });

`;

exports[`no-skip-without-return > invalid(7): import test from 'node:test';\ntest(\"x\", t => { if (cond) { t.skip(); } assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) { t.skip(); } assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(7): import test from 'node:test';\ntest(\"x\", t => { if (cond) { t.skip(); } assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { if (cond) { t.skip(); } assert.ok(x); });
    |                              ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) { t.skip();
  3 | return; } assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(8): import test from 'node:test';\ntest(\"x\", t => { t.todo(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.todo(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(8): import test from 'node:test';\ntest(\"x\", t => { t.todo(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.todo(); assert.ok(x); });
    |                  ^^^^^^^^ \`t.todo()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.todo()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.todo();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(9): import test from 'node:test';\ntest(\"x\", t => { t.skip(\"not ready\"); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.skip("not ready"); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(9): import test from 'node:test';\ntest(\"x\", t => { t.skip(\"not ready\"); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.skip("not ready"); assert.ok(x); });
    |                  ^^^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.skip("not ready");
  3 | return; assert.ok(x); });

`;
